Cambios Lights.java and activity_lights for dimmer30/08/17